--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "glamlog",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Output colorful messages to the command line",
   "main": "index.js",
   "scripts": {
     "test": "node ./index.test.js"
   },
-  "keywords": ["output", "colors"],
+  "keywords": ["output", "colors", "node"],
   "author": "Ryan P. Hansen",
-  "license": "ISC"
+  "license": "ISC",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/rphansen91/glamlog"
+  },
+  "bugs":{
+    "url" : "https://github.com/rphansen91/glamlog/issues"
+  }
 }
